# air-quality-pl

./: README.md
air-quality-pl/: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  qml.qrc  qt_test.pro
air-quality-pl/build-cmake/: CMakeCache.txt  CTestTestfile.cmake  air_quality_pl  air_quality_pl_tests  build.ninja  cmake_install.cmake  compile_commands.json  qrc_qml.cpp
air-quality-pl/build-cmake/Testing/Temporary/: CTestCostData.txt
air-quality-pl/build-cmake/air_quality_pl_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
air-quality-pl/build-cmake/air_quality_pl_autogen/7OIUYE7PDQ/: moc_GiosClient.cpp  moc_GiosClient.cpp.d
air-quality-pl/build-cmake/air_quality_pl_autogen/ISMKEKEPX5/: moc_AppController.cpp  moc_AppController.cpp.d
air-quality-pl/build-cmake/air_quality_pl_tests_autogen/: deps  moc_predefs.h
air-quality-pl/build-cmake/air_quality_pl_tests_autogen/include/: test_core.moc  test_core.moc.d
air-quality-pl/build-cmake/data/: db.json
air-quality-pl/build-cmake/debug/: stations_raw.json
air-quality-pl/data/: db.json
air-quality-pl/debug/: measurements_raw.json  sensors_raw.json  stations_raw.json
air-quality-pl/docs/: mainpage.md  opis_projektu.md
air-quality-pl/qml/: main.qml
air-quality-pl/qml/ui/: GlassButton.qml  GlassCard.qml
air-quality-pl/src/: main.cpp
air-quality-pl/src/analysis/: Analyzer.cpp  Analyzer.h
air-quality-pl/src/app/: AppController.cpp  AppController.h
air-quality-pl/src/model/: Types.h
air-quality-pl/src/net/: GiosClient.cpp  GiosClient.h  GiosParsers.cpp  GiosParsers.h
air-quality-pl/src/storage/: LocalDb.cpp  LocalDb.h
air-quality-pl/tests/: test_core.cpp
